# MyAgentDemo

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.local.json
AgentDemo/: Agent.py  LLMClient.py  Tools.py  __init__.py  agent_system_prompt.py  auth_manager.py  enhanced_agent.py  rejection_tracker.py  strategy_adjuster.py  ticket_api_client.py  ui_feedback.py  user_state_manager.py
